--- a/frontEnd/style.css
+++ b/frontEnd/style.css
@@ -1,4 +1,46 @@
-body
+.blank
 {
-  background-image:image("chicken.jpg");
+  width: 100%;
+  height: 75px;
+}
+
+nav{
+  width: 100%;
+  background-size:contain;
+  height: 50px;
+  background-color: black;
+  padding-bottom: 10px;
+}
+
+a.nav
+{
+  text-align: center;
+  color: grey;
+  display:inline-flex;
+  padding-right: 50px;
+  font-family: arial;
+  text-decoration: none;
+
+}
+
+a.nav:hover{
+  color: rgb(0,100,255);
+  transition: 0.5s;
+}
+
+#home{
+  padding-left: 50px;
+}
+
+div.You
+{
+  padding-top: 50px;
+  padding-left: 60px;
+  font-family: arial;
+}
+
+div > p > a
+{
+  font-weight: bold;
+  text-decoration: none;
 }
