--- a/frontEnd/style.css
+++ b/frontEnd/style.css
@@ -44,3 +44,28 @@ div > p > a
   font-weight: bold;
   text-decoration: none;
 }
+
+button
+{
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+  font-family: arial;
+  font-weight: bold;
+  border-width: 2px;
+  border-style: solid;
+  border-color: black;
+  box-shadow: 10px 10px  22px rgba(0, 0, 0, .8);
+}
+button:focus
+{
+  outline: none;
+}
+
+button:hover
+{
+  background: grey;
+  transition: .5s;
+}
